--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://saquib24k:m4wsqgO7NYKV8VLm@mernlckdata.t56ks7q.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=HIDDEN
